--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,23 +1,30 @@
 .container
     .row
-        .col-lg-4.col-lg-offset-4.text-center
+        .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
             legend Stock Guess
-
     div(ng-if='stocks.length != 0')
         .row
-            .col-lg-4.col-lg-offset-4
+            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
                 #container(style="height: 200px; min-width: 310px")
         br
+        .row(ng-if='!sent')
+            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
+                h4 Guess the stock for {{evaluateDate  | date}}
         .row
-            .col-lg-4.col-lg-offset-4
-                form(ng-submit='sendStock()')
-                    .input-group
-                        input(type='text', ng-model='userStockValue', placeholder='Please type your guess', class='form-control')
+            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
+                form(ng-submit='sendStock(value)', novalidate, ng-if='!sent')
+                    p(ng-show='error', class='help-block text-center') Please type your guess correctly
+                    div(class='input-group', ng-class='{"has-error": error}')
+                        input(type='text', ng-model='value', placeholder='Please type your guess', class='form-control', required)
                         span(class="input-group-btn")
                             button(class="btn btn-default", type="submit") Send
+                div(ng-if='sent', class='text-center')
+                    h4 Thank you for your guess!
+                    h4
+                        a(href='/') Try another stock!
     .text-center(ng-if='stocks.length == 0')
         .row
-            .col-lg-4.col-lg-offset-4
+            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
                 h4
                     | You already guessed all of our stock!
                 h4
@@ -25,7 +32,7 @@
                 h4
                     | Please come back {{evaluateDate | date}}
     .row
-        .col-lg-4.col-lg-offset-4.text-center
+        .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
             hr
             p
                 small
