warning usd currency

--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -36,6 +36,9 @@
             hr
             p
                 small
+                    | All the values are in USD
+            p
+                small
                     | Form submission is private. Your data will only be seen by the people involved in this project.
             p
                 small
