adding user adding guess adding database

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,3 +1,6 @@
+//- TODO: Montar landing page
 extends layout
 block content
-    div(ng-view)
+    a(href="/auth/facebook") Login with Facebook
+    br
+    a(href="/logout") Logout
