--- a/views/partials/terms.jade
+++ b/views/partials/terms.jade
@@ -2,7 +2,7 @@
     .row
         .col-lg-4.col-lg-offset-4.text-center
             h1
-                a(href='#!/') Stock Guess
+                a(href='/app') Stock Guess
             hr
             p
                 small
