--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -2,7 +2,7 @@
     .row
         .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
             legend Stock Guess
-    div(ng-if='stocks.length != 0')
+    div(ng-if='!allSent')
         .row
             .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
                 #container(style="height: 200px; min-width: 310px")
@@ -12,17 +12,18 @@
                 h4 Guess the stock for {{evaluateDate  | date}}
         .row
             .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
-                form(ng-submit='sendStock(value)', novalidate, ng-if='!sent')
+                form(ng-submit='send()', novalidate, ng-if='!sent')
+                    input(type='text', class='hidden', ng-model='guess.stockName')
                     p(ng-show='error', class='help-block text-center') Please type your guess correctly
                     div(class='input-group', ng-class='{"has-error": error}')
-                        input(type='text', ng-model='value', placeholder='Please type your guess', class='form-control', required)
+                        input(type='text', ng-model='guess.stockValue', placeholder='Please type your guess', class='form-control', required)
                         span(class="input-group-btn")
                             button(class="btn btn-default", type="submit") Send
                 div(ng-if='sent', class='text-center')
                     h4 Thank you for your guess!
                     h4
-                        a(href='/') Try another stock!
-    .text-center(ng-if='stocks.length == 0')
+                        a(href='/app') Try another stock!
+    .text-center(ng-if='allSent')
         .row
             .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
                 h4
@@ -51,4 +52,4 @@
             p
                 small
                     | By sending your guess you agree with our &nbsp;
-                    a(href='#!/terms', target='_blank') terms of use.
+                    a(ng-href='#_=_/terms', target='_blank') terms of use.
