--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,35 @@
 //- TODO: Montar landing page
 extends layout
 block content
-    a(href="/auth/facebook") Login with Facebook
-    br
-    a(href="/logout") Logout
+    nav(class="navbar navbar-default navbar-static-top", role="navigation")
+        .navbar-header
+            a(class="navbar-brand", href="/app") Stock Guess
+    .container
+        .jumbotron
+            h1.text-center Welcome to Stock Guess!
+            .row.bs-wizard(style='border-bottom:0;')
+                .col-xs-4.bs-wizard-step.complete
+                    .text-center.bs-wizard-stepnum Step 1
+                    .progress
+                        .progress-bar
+                    a.bs-wizard-dot(href='#')
+                    .bs-wizard-info.text-center
+                        a(href="/auth/facebook", class="btn btn-social btn-facebook btn-lg")
+                            i(class="fa fa-facebook")
+                            | Sign in with Facebook
+
+                .col-xs-4.bs-wizard-step.complete
+                    .text-center.bs-wizard-stepnum Step 2
+                    .progress
+                        .progress-bar
+                    a.bs-wizard-dot(href='#')
+                    .bs-wizard-info.text-center
+                        h3 Guess the value of the stocks in a given day
+
+                .col-xs-4.bs-wizard-step.active
+                    .text-center.bs-wizard-stepnum Step 3
+                    .progress
+                        .progress-bar
+                    a.bs-wizard-dot(href='#')
+                    .bs-wizard-info.text-center
+                        h3 Show the world how good you are with our smart rank
