--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,6 +5,8 @@ html(ng-app='stock')
         meta(name="viewport", content="width=device-width, initial-scale=1")
         link(rel='stylesheet', href='/libs/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet', href='/css/style.css')
+        link(rel='stylesheet', href='/libs/bootstrap-social/bootstrap-social.css')
+        link(rel='stylesheet', href='/libs/font-awesome/css/font-awesome.min.css')
     body
         block content
         script(src='/libs/jquery/dist/jquery.min.js')
@@ -27,3 +29,4 @@ html(ng-app='stock')
         script(src='/js/controllers/me.controller.js')
         script(src='/js/controllers/index.controller.js')
         script(src='/js/controllers/terms.controller.js')
+        script(src='/js/controllers/ranking.controller.js')
