--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,3 +30,4 @@ html(ng-app='stock')
         script(src='/js/controllers/index.controller.js')
         script(src='/js/controllers/terms.controller.js')
         script(src='/js/controllers/ranking.controller.js')
+        script(src='/js/controllers/username.controller.js')
