--- a/views/app.jade
+++ b/views/app.jade
@@ -14,5 +14,5 @@ block content
                     a(href="/logout") Logout
     if !hasUsername
         .alert.alert-warning.text-center.nav-alert(ng-hide='hideAlert')
-            | You don't have an <strong>username</strong>. If you want your guesses to be identified please <a href="#_=_/username">set up an username</a>
+            | You don't have a <strong>username</strong>. If you want your guesses to be identified please <a href="#_=_/username">create a username</a>
     div(ng-view)
