--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -48,7 +48,7 @@
                     |.
             p
                 small
-                    | This data is for academic purpose. It will not be used any personal benefits.
+                    | This data is for academic purpose. It will not be used for any personal benefits.
             p
                 small
                     | By sending your guess you agree with our &nbsp;
