--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -31,7 +31,7 @@
                 h4
                     | Thanks for collaborating
                 h4
-                    | Please come back {{evaluateDate | date}}
+                    | Please come back tomorow to try again!
     .row
         .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
             hr
