views/partials/terms.jade

--- a/views/partials/terms.jade
+++ b/views/partials/terms.jade
@@ -5,5 +5,26 @@
                 a(href='/app') Stock Guess
             hr
             p
+                big
+                    |<b>TERMS OF USE
+
+    .row
+        .col-lg-4.col-lg-offset-4.text-center
+            p
                 small
-                    | Under Construction
+                    |Last update: October 28, 2014
+                    
+    .row
+         p
+            medium
+                |<b>The site: This Site provides a game with the goal to study the following Collective Intelligence's theory: The average of all the guesses is closer to the real answer than the best guess given. Thereby, it's just a scientific experiment non-profit for the discipline of collective intelligence, at Federal Fluminense University, located in Niterói, Rio de Janeiro-Brazil.
+                
+    .row
+        p
+            medium
+                |<b>The game: This game consists in you guess the value of a stock for next week, and the closer to the real answer you get more points you will earn. However, the further away the correct answer is your guess fewer points you will gain, and may even add a negative score. At the end of each week we will update our ranking by adding the scores of each user.
+                
+    .row
+        p
+            medium
+                |Of personal information: All information you provide will be confidential, this includes: name, identity, among others. Such information WILL NOT be used for any purpose other than TO IDENTIFY you with your guesses.
