--- a/views/app.jade
+++ b/views/app.jade
@@ -15,4 +15,17 @@ block content
     if !hasUsername
         .alert.alert-warning.text-center.nav-alert(ng-hide='hideAlert')
             | You don't have a <strong>username</strong>. If you want your guesses to be identified please <a href="#_=_/username">create a username</a>
-    div(ng-view)
+    if hasAgreed
+        div(ng-view)
+    else
+        include ./partials/terms.jade
+        br
+        .row
+            .col-lg-12
+                .text-center
+                    p You need to agree with our terms so you can start using Stock Guess
+        .row
+            .col-lg-12
+                form(action='/api/guess/agree', method="POST")
+                    button.btn.btn-block.btn-primary
+                        | I Agree
