--- a/views/partials/ranking.jade
+++ b/views/partials/ranking.jade
@@ -11,7 +11,7 @@
                             | Position
                         td Username
                         td(class='col-lg-1')
-                            | Score
+                            | Score (pts)
                 tbody
                     tr(ng-repeat='user in rank')
                         td \#{{$index + 1}}
