--- a/views/partials/ranking.jade
+++ b/views/partials/ranking.jade
@@ -3,6 +3,8 @@
         .col-lg-4.col-lg-offset-4.text-center
             h1
                 | Your rank is \#{{myRank}}
+                br
+                .fb-share-button(data-href='http://stocks.rgrillo.com', data-layout='button')
             hr
             table.table
                 thead
