--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,16 @@ html(ng-app='stock')
         link(rel='stylesheet', href='/libs/bootstrap-social/bootstrap-social.css')
         link(rel='stylesheet', href='/libs/font-awesome/css/font-awesome.min.css')
     body
+        #fb-root
+            script.
+                (function(d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) return;
+                js = d.createElement(s); js.id = id;
+                js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=357306191114304&version=v2.0";
+                fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));
+
         block content
         script(src='/libs/jquery/dist/jquery.min.js')
 
