--- a/views/app.jade
+++ b/views/app.jade
@@ -6,6 +6,8 @@ block content
                 a(class="navbar-brand", href="/app") Stock Guess
             ul.nav.navbar-nav
                 li
+                    a(href="#_=_/closes") Previous Stock Values
+                li
                     a(href="#_=_/me") My Guesses
                 li
                     a(href="#_=_/ranking") Ranking
