--- a/views/layout.jade
+++ b/views/layout.jade
@@ -41,3 +41,4 @@ html(ng-app='stock')
         script(src='/js/controllers/terms.controller.js')
         script(src='/js/controllers/ranking.controller.js')
         script(src='/js/controllers/username.controller.js')
+        script(src='/js/controllers/closes.controller.js')
