adding tour, larger width, table highlight

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html(ng-app='stock')
         link(rel='stylesheet', href='/libs/bootstrap/dist/css/bootstrap.min.css')
         link(rel='stylesheet', href='/css/style.css')
         link(rel='stylesheet', href='/libs/bootstrap-social/bootstrap-social.css')
+        link(rel='stylesheet', href='/libs/bootstrap-tour/build/css/bootstrap-tour.min.css')
         link(rel='stylesheet', href='/libs/font-awesome/css/font-awesome.min.css')
     body
         #fb-root
@@ -26,7 +27,8 @@ html(ng-app='stock')
         script(src="http://code.highcharts.com/stock/highstock.js")
         script(src="http://code.highcharts.com/stock/modules/exporting.js")
 
-        script(src='/libs/bootstrap/dist/js/bootstrap.min.js')
+        script(src='/libs/bootstrap/dist/js/bootstrap.min.js') 
+        script(src='/libs/bootstrap-tour/build/js/bootstrap-tour.min.js')
 
         script(src='/libs/angular/angular.js')
         script(src='/libs/angular-route/angular-route.js')
