--- a/views/partials/index.jade
+++ b/views/partials/index.jade
@@ -1,20 +1,20 @@
 .container
     .row
-        .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
+        .col-lg-6.col-lg-offset-3.text-center
             legend Stock Guess
     div(ng-if='!allSent')
         .row
-            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
+            .col-lg-6.col-lg-offset-3
                 h3.text-center(ng-if='isBonus')
                     span.label.label-warning Bonus Round!
-                #container(style="height: 200px; min-width: 310px")
+                #container(style="height: 200px; min-width: 460px")
         br
         .row(ng-if='!sent')
-            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
-                h4
+            .col-lg-6.col-lg-offset-3.text-center
+                h4#evaluateDate
                     | Guess the stock for {{ evaluateDate  | date }}
         .row
-            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
+            .col-lg-6.col-lg-offset-3
                 form(ng-submit='send()', novalidate, ng-if='!sent')
                     input(type='text', class='hidden', ng-model='guess.stockName')
                     p(ng-show='error', class='help-block text-center') Please type your guess correctly
@@ -30,7 +30,7 @@
                         a(href="", ng-click='loadNextGuess()') BONUS ROUND! Click here to try it!
     .text-center(ng-if='allSent')
         .row
-            .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4
+            .col-lg-6.col-lg-offset-3
                 h4
                     | You already guessed all of our stock!
                 h4
@@ -38,7 +38,7 @@
                 h4
                     | Please come back tomorow to try again!
     .row
-        .col-lg-4.col-md-4.col-lg-offset-4.col-md-offset-4.text-center
+        .col-lg-6.col-lg-offset-3.text-center
             hr
             p
                 small
