--- a/views/app.jade
+++ b/views/app.jade
@@ -32,7 +32,10 @@ block content
                 .text-center
                     p You need to agree with our terms so you can start using Stock Guess
         .row
-            .col-lg-12
+            .col-lg-12(ng-app)
+                .form-group.text-center
+                    input(type="checkbox", ng-model='agreed')
+                    |&nbsp;I agree
                 form(action='/api/guess/agree', method="POST")
-                    button.btn.btn-block.btn-primary
-                        | I Agree
+                    button.btn.btn-block.btn-primary(type="submit", ng-class='{disabled: !agreed}')
+                        | Continue
